--- a/content/cn/blog/2025-12-31-2025ai.md
+++ b/content/cn/blog/2025-12-31-2025ai.md
@@ -16,8 +16,6 @@ tags:
   - AI 信息过载
   - 如何学习 AI
 ---
-```ini
-
 今天是2025年最后一天。
 
 感觉有点恍惚。这一年过得，像坐过山车，又像是被什么东西推着跑。没想搞什么正儿八经的年终总结，就是想碎碎念几句，把脑子里这一团浆糊理一理。
@@ -26,9 +24,9 @@ tags:
 
 那时候刚装上 **Cline**，心里盘算着以后代码让它写，我负责喝咖啡。结果上手一试，不行。真不行。简单的逻辑还凑合，稍微多说两句，上下文就爆了，做不了什么事。那时候用的 **DeepSeek Coder**，后来换 **Chat** 版，一样，完全不可用。
 
-> 我当时就在想，这玩意离“甚至不需要程序员”还差十万八千里吧？
+\> 我当时就在想，这玩意离“甚至不需要程序员”还差十万八千里吧？
 
-代码指望不上，我就去折腾生图。**SD1.5**，**SDXL**，**PONY**，**FLUX**，这几个模型轮着刷。那时候为了跑图，电脑机箱热得能煎蛋。
+代码指望不上，我就去折腾生图。\*\*SD1.5\*\*，\*\*SDXL\*\*，\*\*PONY\*\*，\*\*FLUX\*\*，这几个模型轮着刷。那时候为了跑图，电脑机箱热得能煎蛋。
 
 惨的是中间硬盘崩了一次，CPU也烧了。数据全丢。
 
@@ -36,11 +34,11 @@ tags:
 
 没办法，重新买硬盘，重新下模型，重新配环境。
 
-后来又觉得光有图没劲，开始搞视频和声音。**Index-TTS** 配音，**Wan2.0** 做小姐姐跳舞视频。
+后来又觉得光有图没劲，开始搞视频和声音。\*\*Index-TTS\*\* 配音，\*\*Wan2.0\*\* 做小姐姐跳舞视频。
 
 我拿着这些东西去抖音发视频，想着能不能火一把。发了几个月，没多少浏览量。也没那个运营的天赋，这事就算黄了。
 
-到了4月，**GPT-4o** 出了原生图像功能。
+到了4月，\*\*GPT-4o\*\* 出了原生图像功能。
 
 我一看，心态崩了。我哼哧哼哧调半天参数才出来的吉卜力风格，人家一句话就搞定了。除了 **NSFW** 它不让画（说是年底出的成人模式也鸽到了明年一季度），其他的完全不输 **FLUX**。
 
@@ -66,7 +64,7 @@ tags:
 
 最离谱的是 FOLO 上的订阅。我在抖音发视频没人看，这个自动生成的日报居然有18k人订阅，一直霸榜到现在。
 
-> 有时候事情就是这样，无心插柳柳成荫。
+\> 有时候事情就是这样，无心插柳柳成荫。
 
 这个项目给了我点底气，也给我带来了流量。
 
@@ -80,17 +78,17 @@ tags:
 
 把 CLI 逆向成 API 接口，支持 OpenAI 和 Gemini 协议。这个项目发出去，又上了阮一峰周刊。
 
-后来顺手把 kiro 的 **Claude**，**Qwen Code**，**Antigravity** 全逆向了，还支持多协议互转。现在手里的 Token 根本用不完。
+后来顺手把 kiro 的 **Claude**，\*\*Qwen Code\*\*，\*\*Antigravity\*\* 全逆向了，还支持多协议互转。现在手里的 Token 根本用不完。
 
 有了 Token 就想搞事情。
 
-我一口气搞了好几个站。**podcast.hubtoday.app**，**prompt.hubtoday.app**，还有 **AI人相大师**，**遗产管理系统**。
+我一口气搞了好几个站。\*\*[podcast.hubtoday.app](http://podcast.hubtoday.app)\*\*，\*\*[prompt.hubtoday.app](http://prompt.hubtoday.app)\*\*，还有 **AI人相大师**，\*\*遗产管理系统\*\*。
 
-做 **prompt.hubtoday.app** 的时候，我搞了个 Build in Public 挑战：V我50，围观AI开发从零到一的全过程。
+做 [**prompt.hubtoday.app**](http://prompt.hubtoday.app) 的时候，我搞了个 Build in Public 挑战：V我50，围观AI开发从零到一的全过程。
 
 说好一个月搞定网页、后台、桌面端。结果不到3周，一期功能全做完了。
 
-> 二期到现在还没动，前两天群里还有人催更... 只能，假装没看见。
+\> 二期到现在还没动，前两天群里还有人催更... 只能，假装没看见。
 
 最近在弄基于 **Next16** 的出海应用模板，基础功能写差不多了，线上测试环境也搭好了。
 
@@ -100,10 +98,14 @@ tags:
 
 年初还在纠结上下文不够，年底现在的配置已经是神仙打架了：
 
-写代码有 **Claude Code**，**Codex**，**Trae**。
+写代码有 **Claude Code**，\*\*Codex\*\*，\*\*Trae\*\*。
+
 文本有 **Gemini 3.0**，还有平替 **豆包**。
+
 生图有强得离谱的 **Nano Banana Pro**，开源也有 **Flux**。
-视频有 **Veo3.1**，**Sora2**，开源有 **Wan2.6**。
+
+视频有 **Veo3.1**，\*\*Sora2\*\*，开源有 **Wan2.6**。
+
 音频有 **MiniMax**，开源有 **Index-TTS2**。
 
 全是好东西。那些差一点的，早就没人提了。
@@ -123,4 +125,3 @@ tags:
 挺充实的。
 
 就这样吧，2025，新年快乐，2026
-```
